--- a/css/styles.css
+++ b/css/styles.css
@@ -167,3 +167,15 @@ body {
 #footer a:last-child {
   float: right;
 }
+
+/* Granim plugin */
+#canvas-image-blending {
+  position: absolute;
+  display: block;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+}
