--- a/templates/Sightings_Trends.html
+++ b/templates/Sightings_Trends.html
@@ -40,9 +40,9 @@
   <div class="container-fluid">
     <div class="row justify-content-center">
       <div class="col-md-11 content-background">
-        <!-- Start of State Pie Chart -->
-        <h1>Hello World!</h1>
-        <!-- End of State Pie Chart -->
+        <!-- Start of Bar Chart -->
+        <h1>Sightings by Month</h1>
+        <!-- End of Bar Chart -->
       </div>
     </div>
   </div>
@@ -58,7 +58,7 @@
 
   <script src="https://d3js.org/d3.v5.min.js"></script>
   <script src='https://cdn.plot.ly/plotly-2.16.1.min.js'></script>
-  <!-- <script src="./static/js/usStates.js"></script> -->
+  <script src="./static/js/usStates.js"></script>
   <script src="./static/js/Sightings_Map.js"></script>
 
 </body>
