--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -32,7 +32,7 @@ html, body {
 
   width: 100%; height: 100%;
 
-  background: url('/Group-Project-3/plugin_bideo/video_cover.jpeg') no-repeat;
+  background: url('../img/bg-forest-fullscreen.jpg') no-repeat;
   background-size: cover;
   background-position: center;
 }
