--- a/templates/index.html
+++ b/templates/index.html
@@ -6,11 +6,11 @@
   <!-- JQuery -->
   <script src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
   <!-- reset styling -->
-  <link rel="stylesheet" href="../static/css/reset.css">
+  <link rel="stylesheet" href="./static/css/reset.css">
   <!-- Boostrap Stylesheet -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
   <!-- Our own CSS stylesheet -->
-  <link rel="stylesheet" href="../static/css/styles.css" media="screen">
+  <link rel="stylesheet" href="./static/css/styles.css" media="screen">
   <meta name="keywords" content="css3, html5, js, background video, fullscreen video">
   <meta name="description" content="description">
 
@@ -26,17 +26,17 @@
 
     <div id="video_controls">
       <span id="play">
-        <img src="../static/js/plugin_bideo/play.png">
+        <img src="./static/js/plugin_bideo/play.png">
       </span>
       <span id="pause">
-        <img src="../static/js/plugin_bideo/pause.png">
+        <img src="./static/js/plugin_bideo/pause.png">
       </span>
     </div>
 
     <!-- Start of navbar -->
     <script>
       $(function() {
-         $("#navbarHtml").load("navbar.html");
+         $("#navbarHtml").load("./static/html/navbar.html");
       });
     </script>
     <div id="navbarHtml"></div>
@@ -56,8 +56,8 @@
     </a>
   </div>
 
-  <script src="../static/js/plugin_bideo/bideo.js"></script>
-  <script src="../static/js/plugin_bideo/main.js"></script>
+  <script src="./static/js/plugin_bideo/bideo.js"></script>
+  <script src="./static/js/plugin_bideo/main.js"></script>
 
 </body>
 </html>
