--- a/templates/Sightings_Map.html
+++ b/templates/Sightings_Map.html
@@ -9,11 +9,11 @@
   <meta content="width=device-width, initial-scale=1" name="viewport">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <!-- reset styling -->
-  <link rel="stylesheet" href="./static/css/reset.css">
+  <link rel="stylesheet" href="{{ url_for('static', filename='css/reset.css') }}">
   <!-- Boostrap Stylesheet -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
   <!-- Our own CSS stylesheet -->
-  <link rel="stylesheet" href="./static/css/styles.css" media="screen">
+  <link rel="stylesheet" href="{{ url_for('static', filename='css/styles.css') }}" media="screen">
 </head>
 
 <body>
@@ -23,9 +23,9 @@
   <!-- Create a <canvas> element -->
   <canvas id="canvas-image-blending"></canvas>
   <!-- Call the Granim Plugin script -->
-  <script src="./static/js/plugin_granim/dists/granim.js"></script>
+  <script src="{{url_for('static', filename='js/plugin_granim/dists/granim.js')}}" async></script>
   <!-- Create a Granim instance -->
-  <script src="./static/js/visualization_bg.js"></script>
+  <script src="{{url_for('static', filename='js/visualization_bg.js')}}" async></script>
   <!-- End of background -->
 
 
@@ -59,7 +59,7 @@
   <script src="https://d3js.org/d3.v5.min.js"></script>
   <script src='https://cdn.plot.ly/plotly-2.16.1.min.js'></script>
   <!-- <script src="./static/js/usStates.js"></script> -->
-  <script src="./static/js/Sightings_Map.js"></script>
+  <script src="{{url_for('static', filename='js/Sightings_Map.js')}}" async></script>
 
 </body>
 
