--- a/templates/Sightings_Map.html
+++ b/templates/Sightings_Map.html
@@ -38,6 +38,7 @@
 
   <!-- Start of Visualization -->
   <div class="container-fluid">
+    <div id = "map">
     <div class="row justify-content-center">
       <div class="col-md-11 content-background">
         <!-- Start of State Pie Chart -->
@@ -46,6 +47,7 @@
       </div>
     </div>
   </div>
+</div>
   <!-- End of Visualization -->
 
 
