--- a/templates/index.html
+++ b/templates/index.html
@@ -58,8 +58,8 @@
     </a>
   </div>
 
-  <script src="{{url_for('static', filename='js/plugin_bideo/bideo.js')}}" async></script>
-  <script src="{{url_for('static', filename='js/plugin_bideo/main.js')}}" async></script>
+  <script src="{{url_for('static', filename='js/plugin_bideo/bideo.js')}}"></script>
+  <script src="{{url_for('static', filename='js/plugin_bideo/main.js')}}"></script>
   
 </body>
 </html>
