--- a/templates/Sightings_Trends.html
+++ b/templates/Sightings_Trends.html
@@ -26,9 +26,9 @@
   <!-- Create a <canvas> element -->
   <canvas id="canvas-image-blending"></canvas>
   <!-- Call the Granim Plugin script -->
-  <script src="{{url_for('static', filename='js/plugin_granim/dists/granim.js')}}" async></script>
+  <script src="{{url_for('static', filename='js/plugin_granim/dists/granim.js')}}"></script>
   <!-- Create a Granim instance -->
-  <script src="{{url_for('static', filename='js/visualization_bg.js')}}" async></script>
+  <script src="{{url_for('static', filename='js/visualization_bg.js')}}"></script>
   <!-- End of background -->
 
 
@@ -62,8 +62,8 @@
   <script src="https://d3js.org/d3.v5.min.js"></script>
   <script src='https://cdn.plot.ly/plotly-2.16.1.min.js'></script>
   
-  <script src="{{url_for('static', filename='js/usStates.js')}}" async></script>
-  <script src="{{url_for('static', filename='js/Sightings_Map.js')}}" async></script>
+  <script src="{{url_for('static', filename='js/usStates.js')}}"></script>
+  <script src="{{url_for('static', filename='js/Sightings_Map.js')}}"></script>
 
 </body>
 
