--- a/templates/Sightings_Map.html
+++ b/templates/Sightings_Map.html
@@ -8,12 +8,26 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1" name="viewport">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <!--Leaflet CSS-->
+  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.6.0/dist/leaflet.css"
+  integrity="sha512-xwE/Az9zrjBIphAcBb3F6JVqxf46+CDLwfLMHloNu6KEQCAWi6HcDUbeOfBIptF7tcCzusKFjFw2yuvEpDL9wQ=="
+  crossorigin="" />
+
+  <!-- Leaflet JS code-->
+  <script src="https://unpkg.com/leaflet@1.6.0/dist/leaflet.js"
+  integrity="sha512-gZwIG9x3wUXg2hdXF6+rVkLF/0Vi9U8D2Ntg4Ga5I5BZpVkVxlJWbSQtXPSiUTtC0TjtGOmxa1AJPuV0CPthew=="
+  crossorigin=""></script>
+
+   <!-- D3 Library -->
+   <script src="https://d3js.org/d3.v5.min.js"></script>
   <!-- reset styling -->
   <link rel="stylesheet" href="{{ url_for('static', filename='css/reset.css') }}">
   <!-- Boostrap Stylesheet -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
   <!-- Our own CSS stylesheet -->
   <link rel="stylesheet" href="{{ url_for('static', filename='css/styles.css') }}" media="screen">
+  <!--URL for API-->
+  <script>const url = "{{url_for('sightings')}}";</script>
 </head>
 
 <body>
@@ -23,9 +37,9 @@
   <!-- Create a <canvas> element -->
   <canvas id="canvas-image-blending"></canvas>
   <!-- Call the Granim Plugin script -->
-  <script src="{{url_for('static', filename='js/plugin_granim/dists/granim.js')}}" async></script>
+  <script src="{{url_for('static', filename='js/plugin_granim/dists/granim.js')}}"></script>
   <!-- Create a Granim instance -->
-  <script src="{{url_for('static', filename='js/visualization_bg.js')}}" async></script>
+  <script src="{{url_for('static', filename='js/visualization_bg.js')}}"></script>
   <!-- End of background -->
 
 
@@ -38,7 +52,6 @@
 
   <!-- Start of Visualization -->
   <div class="container-fluid">
-    <div id = "map">
     <div class="row justify-content-center">
       <div class="col-md-11 content-background">
         <!-- Start of State Pie Chart -->
@@ -47,7 +60,6 @@
       </div>
     </div>
   </div>
-</div>
   <!-- End of Visualization -->
 
 
@@ -61,7 +73,7 @@
   <script src="https://d3js.org/d3.v5.min.js"></script>
   <script src='https://cdn.plot.ly/plotly-2.16.1.min.js'></script>
   <!-- <script src="./static/js/usStates.js"></script> -->
-  <script src="{{url_for('static', filename='js/Sightings_Map.js')}}" async></script>
+  <script src="{{url_for('static', filename='js/Sightings_Map.js')}}"></script>
 
 </body>
 
