fixed navbar and worked on UFO_Shapes

--- a/templates/UFO_shapes.html
+++ b/templates/UFO_shapes.html
@@ -17,6 +17,9 @@
   <!-- Our own CSS stylesheet -->
   <link rel="stylesheet" href="{{ url_for('static', filename='css/styles.css') }}" media="screen">
 
+  <!-- Data -->
+  <script>const sightings_url = "{{url_for('sightings')}}";</script>
+
 </head>
 
 <body>
