--- a/templates/Sightings_Trends.html
+++ b/templates/Sightings_Trends.html
@@ -59,12 +59,14 @@
           <!-- End of Bar Chart -->
         </div>
     </div>
+     <div class="row justify-content-center"></div>
           <div class="col-md-12 content-background">
             <!-- Start of Bar Chart -->
             <h1>Sightings by Hour of Day (UTC)</h1>
             <div id="bar2"></div>
             <!-- End of Bar Chart -->
           </div>
+  </div>
   </div>
   <!-- End of Visualization -->
 
