--- a/templates/Sightings_Map.html
+++ b/templates/Sightings_Map.html
@@ -62,7 +62,7 @@
     <div class="row justify-content-center">
       <div class="col-md-11 content-background">
         <!-- Start of State Pie Chart -->
-        <h1>Testing!</h1>
+        <h1>Sightings!</h1>
         <!-- End of State Pie Chart -->
       </div>
     </div>
