--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -5,7 +5,8 @@
 }
 
 /* plugin_bideo */
-html, body {
+html,
+body {
   width: 100%;
   height: 100%;
   overflow: hidden;
@@ -14,23 +15,29 @@ html, body {
 #container {
   overflow: hidden;
   position: absolute;
-  top: 0; left: 0; right: 0; bottom: 0;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
 }
 
 #background_video {
   position: absolute;
 
-  top: 50%; left: 50%;
+  top: 50%;
+  left: 50%;
   transform: translate(-50%, -50%);
 
   object-fit: cover;
-  height: 100%; width: 100%;
+  height: 100%;
+  width: 100%;
 }
 
 #video_cover {
   position: absolute;
 
-  width: 100%; height: 100%;
+  width: 100%;
+  height: 100%;
 
   background: url('../img/bg-forest-fullscreen.jpg') no-repeat;
   background-size: cover;
@@ -46,9 +53,11 @@ html, body {
 #play img {
   width: 100px;
 }
+
 #pause img {
   width: 90px;
 }
+
 #pause {
   display: none;
 }
@@ -66,8 +75,11 @@ body {
 
 #overlay {
   position: absolute;
-  top: 0; right: 0; left: 0; bottom: 0;
-  background: rgba(0,0,0,0.5);
+  top: 0;
+  right: 0;
+  left: 0;
+  bottom: 0;
+  background: rgba(0, 0, 0, 0.5);
 }
 
 #index_page {
@@ -100,29 +112,35 @@ body {
   margin-inline: 5px;
   margin-top: 5px;
   background-color: rgba(255, 255, 255, 0.5);
-  border: 2px solid rgba(255,255,255,0.5);
+  border: 2px solid rgba(255, 255, 255, 0.5);
   border-radius: 10px;
   padding: 5px;
 }
 
-@media (max-width: 768px) { /* Navbar has to shrink. Otherwise, */
-  .content-background {     /* the options wrap and look weird. */
+@media (max-width: 768px) {
+
+  /* Navbar has to shrink. Otherwise, */
+  .content-background {
+    /* the options wrap and look weird. */
     font-size: 14px;
     letter-spacing: 0px;
     margin-left: 5px;
     margin-right: 5px;
   }
+
   .navbar {
     padding-inline: 5px;
   }
 }
 
-a:hover {   /* links light up when hovered over and overwrite default blue */
+a:hover {
+  /* links light up when hovered over and overwrite default blue */
   color: black;
   background-color: whitesmoke;
 }
 
-#selectedStateName {  /* dropdown on the same line as current state name */
+#selectedStateName {
+  /* dropdown on the same line as current state name */
   display: inline;
   text-transform: capitalize;
   text-align: center;
@@ -138,10 +156,12 @@ select {
 
 #footer {
   position: absolute;
-  bottom: 0; right: 0;
+  bottom: 0;
+  right: 0;
 }
+
 #footer a {
-  color: rgba(255,255,255,0.5);
+  color: rgba(255, 255, 255, 0.5);
   text-decoration: none;
   margin: 10px;
   font-size: 12px;
