--- a/templates/Sightings_Trends.html
+++ b/templates/Sightings_Trends.html
@@ -54,7 +54,7 @@
       </div>
         <div class="col-md-5 content-background">
           <!-- Start of Bar Chart -->
-          <h1>Sightings by Month 2022</h1>
+          <h1>Sightings by Month</h1>
           <div id="bar1"></div>
           <!-- End of Bar Chart -->
         </div>
