freeze flask formatting edits

--- a/templates/Sightings_Map.html
+++ b/templates/Sightings_Map.html
@@ -1,88 +1,60 @@
-<!doctype html>
-<html lang="en-us">
+{% extends 'navbar.html' %}
 
-<head>
-  <title>Sightings Map</title>
-  <!-- JQuery -->
-  <script src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
-  <meta charset="utf-8">
-  <meta content="width=device-width, initial-scale=1" name="viewport">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  
-  <!-- Leaflet JS code-->
-  <script src="https://unpkg.com/leaflet@1.6.0/dist/leaflet.js"
+{% block title %}Sightings Map{% endblock %}
+
+{% block head %}
+<!-- Leaflet JS code-->
+<script src="https://unpkg.com/leaflet@1.6.0/dist/leaflet.js"
   integrity="sha512-gZwIG9x3wUXg2hdXF6+rVkLF/0Vi9U8D2Ntg4Ga5I5BZpVkVxlJWbSQtXPSiUTtC0TjtGOmxa1AJPuV0CPthew=="
   crossorigin=""></script>
 
-  <!--Leaflet Heatmap plugin-->
-  <script type="text/javascript" src="{{ url_for('static', filename='js/leaflet-heat.js') }}"></script>
+<!--Leaflet Heatmap plugin-->
+<script type="text/javascript" src="{{ url_for('static', filename='js/leaflet-heat.js') }}"></script>
 
-  <!-- D3 Library -->
-  <script src="https://d3js.org/d3.v5.min.js"></script>
+<!-- D3 Library -->
+<script src="https://d3js.org/d3.v5.min.js"></script>
 
-  <!-- Leaflet CSS -->
-
-  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.6.0/dist/leaflet.css"
+<!-- Leaflet CSS -->
+<link rel="stylesheet" href="https://unpkg.com/leaflet@1.6.0/dist/leaflet.css"
   integrity="sha512-xwE/Az9zrjBIphAcBb3F6JVqxf46+CDLwfLMHloNu6KEQCAWi6HcDUbeOfBIptF7tcCzusKFjFw2yuvEpDL9wQ=="
   crossorigin="" />
 
+<!--URL for API-->
+<script>const url = "{{url_for('sightings')}}";</script>
 
-  <!-- reset styling -->
-  <link rel="stylesheet" href="{{ url_for('static', filename='css/reset.css') }}">
-  <!-- Boostrap Stylesheet -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-  <!-- Our own CSS stylesheet -->
-  <link rel="stylesheet" href="{{ url_for('static', filename='css/styles.css') }}" media="screen">
-  <!--URL for API-->
-  <script>const url = "{{url_for('sightings')}}";</script>
-</head>
+{% endblock %}
 
-<body>
-<!--comment-->
+{% block content %}
+<!-- Start of background -->
+<!-- Create a <canvas> element -->
+<canvas id="canvas-image-blending"></canvas>
+<!-- Call the Granim Plugin script -->
+<script src="{{url_for('static', filename='js/plugin_granim/dists/granim.js')}}"></script>
+<!-- Create a Granim instance -->
+<script src="{{url_for('static', filename='js/visualization_bg.js')}}"></script>
+<!-- End of background -->
 
-  <!-- Start of background -->
-  <!-- Create a <canvas> element -->
-  <canvas id="canvas-image-blending"></canvas>
-  <!-- Call the Granim Plugin script -->
-  <script src="{{url_for('static', filename='js/plugin_granim/dists/granim.js')}}"></script>
-  <!-- Create a Granim instance -->
-  <script src="{{url_for('static', filename='js/visualization_bg.js')}}"></script>
-  <!-- End of background -->
-
-
-
-  <!-- Start of navbar -->
-  <script>$(function() {$("#navbarHtml").load("./static/html/navbar.html");});</script><div id="navbarHtml"></div>
-  <!-- End of navbar -->
-
-
-
-  <!-- Start of Visualization -->
-  <div class="container-fluid">
-    <div class="row justify-content-center">
-      <div class="col-md-11 content-background">
-        <!-- Start of State Pie Chart -->
-        <h1>Sightings!</h1>
-        <!-- End of State Pie Chart -->
-      </div>
+<!-- Start of Visualization -->
+<div class="container-fluid">
+  <div class="row justify-content-center">
+    <div class="col-md-11 content-background">
+      <!-- Start of State Pie Chart -->
+      <h1>Sightings!</h1>
+      <!-- End of State Pie Chart -->
     </div>
   </div>
-  <!-- End of Visualization -->
+</div>
 
+<div id="footer">
+  <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank">
+    Lorem ipsum dolor.
+  </a>
+</div>
 
+<script src="https://d3js.org/d3.v5.min.js"></script>
+<script src='https://cdn.plot.ly/plotly-2.16.1.min.js'></script>
+<!-- <script src="./static/js/usStates.js"></script> -->
+<div id="map"></div>
+<script src="{{url_for('static', filename='js/Sightings_Map.js')}}"></script>
 
-  <div id="footer">
-    <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank">
-      Lorem ipsum dolor.
-    </a>
-  </div>
-
-  <script src="https://d3js.org/d3.v5.min.js"></script>
-  <script src='https://cdn.plot.ly/plotly-2.16.1.min.js'></script>
-  <!-- <script src="./static/js/usStates.js"></script> -->
-  <div id="map"></div>
-  <script src="{{url_for('static', filename='js/Sightings_Map.js')}}"></script>
-
-</body>
-
-</html>
+{% endblock %}
