--- a/templates/Sightings_Trends.html
+++ b/templates/Sightings_Trends.html
@@ -1,31 +1,15 @@
-<!doctype html>
-<html lang="en-us">
+{% extends 'navbar.html' %}
 
-<head>
-  <title>Sightings Trends</title>
-  <!-- JQuery -->
-  <script src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
-  <meta charset="utf-8">
-  <meta content="width=device-width, initial-scale=1" name="viewport">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <!-- reset styling -->
-  <link rel="stylesheet" href="{{ url_for('static', filename='css/reset.css') }}">
+{% block title %}Sightings Trends{% endblock %}
 
-  <!-- Boostrap Stylesheet -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-  <!-- Our own CSS stylesheet -->
-  <link rel="stylesheet" href="{{ url_for('static', filename='css/styles.css') }}" media="screen">
-  <!--URL for API-->
+{% block head %}
   <script>const url = "{{url_for('sightings')}}";</script>
   <script>const state_url = "{{url_for('sightings_state')}}";</script>
   <script>const month_url = "{{url_for('sightings_month')}}";</script>
   <script>const hour_url = "{{url_for('sightings_hour')}}";</script>
+{% endblock %}
 
-</head>
-
-<body>
-
-
+{% block content %}
   <!-- Start of background -->
   <!-- Create a <canvas> element -->
   <canvas id="canvas-image-blending"></canvas>
@@ -34,14 +18,6 @@
   <!-- Create a Granim instance -->
   <script src="{{url_for('static', filename='js/visualization_bg.js')}}"></script>
   <!-- End of background -->
-
-
-
-  <!-- Start of navbar -->
-  <script>$(function() {$("#navbarHtml").load("./static/html/navbar.html");});</script><div id="navbarHtml"></div>
-  <!-- End of navbar -->
-
-
 
   <!-- Start of Visualization -->
   <div class="container-fluid">
@@ -84,6 +60,4 @@
   <script src="{{url_for('static', filename='js/usStates.js')}}"></script>
   <script src="{{url_for('static', filename='js/Sighting_Trends.js')}}"></script>
 
-</body>
-
-</html>
+{% endblock %}
