--- a/templates/index.html
+++ b/templates/index.html
@@ -1,25 +1,13 @@
-<!doctype html>
-<head>
-  <meta charset="utf-8">
-  <meta content="width=device-width, initial-scale=1" name="viewport">
-  <title>US_UFO_Sightings</title>
-  <!-- JQuery -->
-  <script src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
-  <!-- reset styling -->
-  <link rel="stylesheet" href="{{ url_for('static', filename='css/reset.css') }}">
-  
-  <!-- Boostrap Stylesheet -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-  
-  <!-- Our own CSS stylesheet -->
-  <link rel="stylesheet" href="{{ url_for('static', filename='css/styles.css') }}" media="screen">
-  <meta name="keywords" content="css3, html5, js, background video, fullscreen video">
-  <meta name="description" content="description">
+{% extends 'navbar.html' %}
 
-  <script src="https://use.typekit.net/nlq1kdt.js"></script>
-  <script>try{Typekit.load({ async: true });}catch(e){}</script>
-</head>
-<body>
+{% block title %}Home{% endblock %}
+
+{% block head %}
+<script src="https://use.typekit.net/nlq1kdt.js"></script>
+<script>try{Typekit.load({ async: true });}catch(e){}</script>
+{% endblock %}
+
+{% block content %}
   <div id="container">
     <video id="background_video" loop muted></video>
     <div id="video_cover"></div>
@@ -33,15 +21,6 @@
         <img src="{{url_for('static', filename='js/plugin_bideo/pause.png')}}">
       </span>
     </div>
-
-    <!-- Start of navbar -->
-    <script>
-      $(function() {
-         $("#navbarHtml").load("./static/html/navbar.html");
-      });
-    </script>
-    <div id="navbarHtml"></div>
-    <!-- End of navbar -->
 
     <section class="content-background" id="index_page">
       <div>
@@ -59,6 +38,5 @@
 
   <script src="{{url_for('static', filename='js/plugin_bideo/bideo.js')}}"></script>
   <script src="{{url_for('static', filename='js/plugin_bideo/main.js')}}"></script>
-  
-</body>
-</html>
+
+{% endblock %}
