--- a/templates/Sightings_Map.html
+++ b/templates/Sightings_Map.html
@@ -21,10 +21,9 @@
 
 <!--URL for API-->
 <script>const url = "{{url_for('sightings')}}";</script>
-
 {% endblock %}
 
-{% block content %}
+{% block background %}
 <!-- Start of background -->
 <!-- Create a <canvas> element -->
 <canvas id="canvas-image-blending"></canvas>
@@ -33,7 +32,9 @@
 <!-- Create a Granim instance -->
 <script src="{{url_for('static', filename='js/visualization_bg.js')}}"></script>
 <!-- End of background -->
+{% endblock %}
 
+{% block content %}
 <!-- Start of Visualization -->
 <div class="container-fluid">
   <div class="row justify-content-center">
@@ -45,15 +46,9 @@
   </div>
 </div>
 
-<div id="footer">
-  <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank">
-    Lorem ipsum dolor.
-  </a>
-</div>
-
 <script src="https://d3js.org/d3.v5.min.js"></script>
 <script src='https://cdn.plot.ly/plotly-2.16.1.min.js'></script>
-<!-- <script src="./static/js/usStates.js"></script> -->
+
 <div id="map"></div>
 <script src="{{url_for('static', filename='js/Sightings_Map.js')}}"></script>
 
