--- a/templates/Sightings_Trends.html
+++ b/templates/Sightings_Trends.html
@@ -3,61 +3,55 @@
 {% block title %}Sightings Trends{% endblock %}
 
 {% block head %}
-  <script>const url = "{{url_for('sightings')}}";</script>
-  <script>const state_url = "{{url_for('sightings_state')}}";</script>
-  <script>const month_url = "{{url_for('sightings_month')}}";</script>
-  <script>const hour_url = "{{url_for('sightings_hour')}}";</script>
+<script>const url = "{{url_for('sightings')}}";</script>
+<script>const state_url = "{{url_for('sightings_state')}}";</script>
+<script>const month_url = "{{url_for('sightings_month')}}";</script>
+<script>const hour_url = "{{url_for('sightings_hour')}}";</script>
+{% endblock %}
+
+{% block background %}
+<!-- Start of background -->
+<!-- Create a <canvas> element -->
+<canvas id="canvas-image-blending"></canvas>
+<!-- Call the Granim Plugin script -->
+<script src="{{url_for('static', filename='js/plugin_granim/dists/granim.js')}}"></script>
+<!-- Create a Granim instance -->
+<script src="{{url_for('static', filename='js/visualization_bg.js')}}"></script>
+<!-- End of background -->
 {% endblock %}
 
 {% block content %}
-  <!-- Start of background -->
-  <!-- Create a <canvas> element -->
-  <canvas id="canvas-image-blending"></canvas>
-  <!-- Call the Granim Plugin script -->
-  <script src="{{url_for('static', filename='js/plugin_granim/dists/granim.js')}}"></script>
-  <!-- Create a Granim instance -->
-  <script src="{{url_for('static', filename='js/visualization_bg.js')}}"></script>
-  <!-- End of background -->
-
-  <!-- Start of Visualization -->
-  <div class="container-fluid">
-    <div class="row justify-content-center">
-      <div class="col-md-6 content-background">
-        <!-- Start of Bar Chart -->
-        <h1>Sightings by State</h1>
-        <div id="bar"></div>
-        <!-- End of Bar Chart -->
-      </div>
-        <div class="col-md-5 content-background">
-          <!-- Start of Bar Chart -->
-          <h1>Sightings by Month</h1>
-          <div id="bar1"></div>
-          <!-- End of Bar Chart -->
-        </div>
+<!-- Start of Visualization -->
+<div class="container-fluid">
+  <div class="row justify-content-center">
+    <div class="col-md-6 content-background">
+      <!-- Start of Bar Chart -->
+      <h1>Sightings by State</h1>
+      <div id="bar"></div>
+      <!-- End of Bar Chart -->
     </div>
-      <div class="row justify-content-center">
-          <div class="col-md-11 content-background">
-            <!-- Start of Bar Chart -->
-            <h1>Sightings by Hour of Day (UTC)</h1>
-            <div id="bar2"></div>
-            <!-- End of Bar Chart -->
-          </div>
-      </div>
+    <div class="col-md-5 content-background">
+      <!-- Start of Bar Chart -->
+      <h1>Sightings by Month</h1>
+      <div id="bar1"></div>
+      <!-- End of Bar Chart -->
+    </div>
   </div>
-  <!-- End of Visualization -->
-
-
-
-  <div id="footer">
-    <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank">
-      Lorem ipsum dolor.
-    </a>
+  <div class="row justify-content-center">
+    <div class="col-md-11 content-background">
+      <!-- Start of Bar Chart -->
+      <h1>Sightings by Hour of Day (UTC)</h1>
+      <div id="bar2"></div>
+      <!-- End of Bar Chart -->
+    </div>
   </div>
+</div>
+<!-- End of Visualization -->
 
-  <script src="https://d3js.org/d3.v5.min.js"></script>
-  <script src='https://cdn.plot.ly/plotly-2.16.1.min.js'></script>
-  
-  <script src="{{url_for('static', filename='js/usStates.js')}}"></script>
-  <script src="{{url_for('static', filename='js/Sighting_Trends.js')}}"></script>
+<script src="https://d3js.org/d3.v5.min.js"></script>
+<script src='https://cdn.plot.ly/plotly-2.16.1.min.js'></script>
+
+<script src="{{url_for('static', filename='js/usStates.js')}}"></script>
+<script src="{{url_for('static', filename='js/Sighting_Trends.js')}}"></script>
 
 {% endblock %}
