--- a/templates/Sightings_Map.html
+++ b/templates/Sightings_Map.html
@@ -40,7 +40,7 @@
   <div class="row justify-content-center">
     <div class="col-md-11 content-background">
       <!-- Start of State Pie Chart -->
-      <h1>Sightings!</h1>
+      <h1>UFO Sightings Map</h1>
       <!-- End of State Pie Chart -->
     </div>
   </div>
