--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -52,8 +52,8 @@
     {% block content %}{% endblock %}
 
     <div id="footer">
-        <a href="https://www.youtube.com/watch?v=w7JrHIHi8t0" target="_blank">
-            Lorem ipsum dolor sit amet.
+        <a href="https://nuforc.org/" target="_blank">
+            Data from UFORC
         </a>
     </div>
     
