--- a/templates/Sightings_Trends.html
+++ b/templates/Sightings_Trends.html
@@ -1,6 +1,8 @@
 {% extends 'navbar.html' %}
 
+
 {% block title %}Sightings Trends{% endblock %}
+
 
 {% block head %}
 <script>const url = "{{url_for('sightings')}}";</script>
@@ -9,7 +11,8 @@
 <script>const hour_url = "{{url_for('sightings_hour')}}";</script>
 {% endblock %}
 
-{% block background %}
+
+{% block content %}
 <!-- Start of background -->
 <!-- Create a <canvas> element -->
 <canvas id="canvas-image-blending"></canvas>
@@ -18,19 +21,17 @@
 <!-- Create a Granim instance -->
 <script src="{{url_for('static', filename='js/visualization_bg.js')}}"></script>
 <!-- End of background -->
-{% endblock %}
 
-{% block content %}
 <!-- Start of Visualization -->
-<div class="container-fluid">
+<div class="container-fluid mt-0">
   <div class="row justify-content-center">
-    <div class="col-md-6 content-background">
+    <div class="col-md-7 content-background justify-content-center">
       <!-- Start of Bar Chart -->
       <h1>Sightings by State</h1>
       <div id="bar"></div>
       <!-- End of Bar Chart -->
     </div>
-    <div class="col-md-5 content-background">
+    <div class="col-md-4 content-background justify-content-center">
       <!-- Start of Bar Chart -->
       <h1>Sightings by Month</h1>
       <div id="bar1"></div>
@@ -38,7 +39,7 @@
     </div>
   </div>
   <div class="row justify-content-center">
-    <div class="col-md-11 content-background">
+    <div class="col-md-11 content-background justify-content-center">
       <!-- Start of Bar Chart -->
       <h1>Sightings by Hour of Day (UTC)</h1>
       <div id="bar2"></div>
