--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -29,23 +29,22 @@
 
 <body>
 
-    {% block background %}{% endblock %}
-
-    <nav class="navbar navbar-expand m-0 p-0">
-        <a href="{{url_for('index')}}" class="content-background" id="home-button">Home</a>
-        <div class="collapse navbar-collapse justify-content-end" id="main-nav">
-            <ul class="navbar-nav">
-                <li class="nav-item">
-                    <a href="{{url_for('sightings_map')}}" class="content-background">Sightings Heatmap</a>
-                </li>
-                <li class="nav-item">
-                    <a href="{{url_for('ufo_shapes')}}" class="content-background">UFO Shapes</a>
-                </li>
-                <li class="nav-item">
-                    <a href="{{url_for('sightings_trends')}}" class="content-background">Sightings by Trends</a>
-
-                </li>
-            </ul>
+    <nav class="navbar navbar-expand m-0 p-0 bg-transparent">
+        <div class="container-fluid m-0 p-0">
+            <a href="{{url_for('index')}}" class="content-background" id="home-button">Home</a>
+            <div class="collapse navbar-collapse justify-content-end" id="main-nav">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a href="{{url_for('sightings_map')}}" class="content-background">Sightings Map</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="{{url_for('ufo_shapes')}}" class="content-background">UFO Shapes</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="{{url_for('sightings_trends')}}" class="content-background">Sightings by Trends</a>
+                    </li>
+                </ul>
+            </div>
         </div>
     </nav>
 
@@ -56,7 +55,7 @@
             Data from UFORC
         </a>
     </div>
-    
+
 </body>
 
 </html>
