--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -34,8 +34,8 @@ body {
 
   width: 100%;
   height: 100%;
-
-  background: url('../img/bg-forest-fullscreen.jpg') no-repeat;
+/* 
+  background: url('../img/bg-forest-fullscreen.jpg') no-repeat; */
   background-size: cover;
   background-position: center;
 }
