--- a/templates/UFO_shapes.html
+++ b/templates/UFO_shapes.html
@@ -44,6 +44,6 @@
 <script src='https://cdn.plot.ly/plotly-2.16.1.min.js'></script>
 
 <script src="{{url_for('static', filename='js/usStates.js')}}"></script>
-<script src="{{url_for('static', filename='js/UFO_Shapes.js')}}"></script>
+<script src="{{url_for('static', filename='js/UFO_shapes.js')}}"></script>
 
 {% endblock %}
