--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -27,7 +27,7 @@
 
 </head>
 
-<body>
+<body background="{{url_for('static', filename='img/bg-forest-fullscreen.jpg')}}">
 
     <nav class="navbar navbar-expand m-0 p-0 bg-transparent">
         <div class="container-fluid m-0 p-0">
