navbar update - github repository link (bootstrap icon)

--- a/templates/index.html
+++ b/templates/index.html
@@ -18,7 +18,7 @@
   <section class="content-background" id="index_page">
     <div>
       <h1>WE ARE NOT ALONE</h1>
-      <p>In 2022 alone, there were <strong>4.3k</strong> reported UFO sightings in the United States. Click around for some visualizations.</p>
+      <p>In 2022, there were <strong>4.3k</strong> reported UFO sightings in the United States. Click around for some visualizations.</p>
     </div>
   </section>
 </div>
