--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -20,8 +20,11 @@
 
     <!-- Our own CSS stylesheet -->
     <link rel="stylesheet" href="{{ url_for('static', filename='css/styles.css') }}" media="screen">
-    <meta name="keywords" content="css3, html5, js, background video, fullscreen video">
+    <meta name="keywords" content="css3, html5, js, background video, fullscreen video, bootstrap-icons">
     <meta name="description" content="description">
+
+    <!-- Bootstrap Icons -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.2/font/bootstrap-icons.css">
 
     {% block head %}{% endblock %}
 
@@ -34,6 +37,13 @@
             <a href="{{url_for('index')}}" class="content-background" id="home-button">Home</a>
             <div class="collapse navbar-collapse justify-content-end" id="main-nav">
                 <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a id="github-link" href="https://github.com/scheaton/Group-Project-3" target="_blank" rel="noreferrer">
+                            <button class="btn" type="submit">
+                                <i class="bi bi-github"></i>
+                            </button>
+                        </a>
+                    </li>
                     <li class="nav-item">
                         <a href="{{url_for('sightings_map')}}" class="content-background">Sightings Map</a>
                     </li>
