--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -38,11 +38,10 @@
             <div class="collapse navbar-collapse justify-content-end" id="main-nav">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a id="github-link" href="https://github.com/scheaton/Group-Project-3" target="_blank" rel="noreferrer">
-                            <button class="btn" type="submit">
+                        <a href="https://github.com/scheaton/Group-Project-3" class="content-background">GitHub</a>
+                            <!-- <button class="btn" type="submit">
                                 <i class="bi bi-github"></i>
-                            </button>
-                        </a>
+                            </button> -->
                     </li>
                     <li class="nav-item">
                         <a href="{{url_for('sightings_map')}}" class="content-background">Sightings Map</a>
