--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -25,7 +25,8 @@
 
     <!-- Bootstrap Icons -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.2/font/bootstrap-icons.css">
-
+    <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css'>
+   
     {% block head %}{% endblock %}
 
 </head>
@@ -38,7 +39,7 @@
             <div class="collapse navbar-collapse justify-content-end" id="main-nav">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a href="https://github.com/scheaton/Group-Project-3" class="content-background">GitHub</a>
+                        <a href="https://github.com/scheaton/Group-Project-3" class="content-background" target="blank"><i class='fa fa-github'></i></a>
                     </li>
                     <li class="nav-item">
                         <a href="{{url_for('sightings_map')}}" class="content-background">Sightings Map</a>
